--- a/form.css
+++ b/form.css
@@ -1,15 +1,22 @@
-
-
 .popup_body{
     width: 650px;
     background-color: white;
     height: 440px;
-    border-radius: 20px;  
+    border-radius: 4px;  
     margin-top: 200px;
-    margin-left: 640px;
     padding-top: 20px;
     flex-direction: column;
- 
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+.popup{
+    visibility: hidden;
+}
+
+.popup:target{
+    visibility: visible;
 }
 
 .form{
@@ -23,10 +30,25 @@
     top: 0;
     left: 0;
     overflow-y: auto;
-    transition: all 0.8 ease 0s;
+    transition: all 0.3 ease 0s;
     z-index: 10;
 }
 
+.popup .form:target{
+    visibility: visible;
+    
+}
+
+.close{
+    position: absolute;
+    text-decoration: none;
+    color: black;
+    font-size: 28px;
+    left: 93%;
+    top: 2%;
+   
+    
+}
 
 .form_title{
     text-align: center;
@@ -90,7 +112,7 @@
     height: 50px;
     width: 55%;
     padding: 0 20px;
-    border-radius: 5px;
+    border-radius: 4px;
     margin-left:125px;
 }
 
@@ -101,3 +123,4 @@
 .error .form_input{
     box-shadow: 0 0 15px red;
 }
+
