--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     src: url(/DARAY.OTF);
 }
 
+@font-face {
+    font-family: "DISPLAYED";
+    src: url(/DISPLAYED.woff);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +18,7 @@
 body{
     box-sizing: border-box;
     font-family: "Daray";
-   
+    font-weight: bold;
 }
 
 html{
@@ -30,12 +35,15 @@ header{
     height: 160px;
     display: flex;
     justify-content: center;
+    font-family: "DISPLAYED";
+    font-weight: bold;
 }
 
 .time{
     margin-top: 65px;
     position: absolute;
-    margin-right: 1280px;
+    margin-right: 1270px;
+    font-size: 20px;
 }
 
 .bg{
@@ -48,11 +56,11 @@ header{
 }
 
 .social{
-    padding-top: 60px;
+    padding-top: 65px;
     padding-right: 1380px;
     display: flex;
     position: absolute;
-    margin-left: 430px;
+    margin-left: 480px;
 }
 
 .social a{
@@ -78,6 +86,8 @@ header{
     display: flex;
     margin-top: 40px;
     margin-left: 1150px;
+    font-family: "DISPLAYED";
+    font-weight: bold;
 }
 
 .number{
@@ -87,6 +97,7 @@ header{
 .call a{
     text-decoration: none;
     color: black;
+    font-size: 20px;
 }
 
 .navbar{
@@ -113,6 +124,7 @@ header{
   padding-left: 40px;
   margin-left: -5px;
   margin-top: -20px;
+
 }
 
 
@@ -134,6 +146,9 @@ a.glo{
     transition: all .3s ease-in .3s;
     font:  12px tahoma;
     border: 1px solid #00C6FF;
+    font-size: 13px;
+    font-weight: bold;
+    font-family: "DISPLAYED";
     
    }
   a.glo:hover {
@@ -210,6 +225,12 @@ img.animated-gif{
     display: flex;
     justify-content: center;
     height: 280px;
+    
+}
+
+.info{
+    padding-left: 50px;
+    justify-content: center;
 }
 
 .card{
@@ -238,30 +259,32 @@ img.animated-gif{
 
 .name{
     margin-top: 15px;
-    font-size: 18px;
-    font-family: 'Noto Sans JP', sans-serif ;
+    font-size: 28px;
+  
 }
 
 .name1{
     margin-top: 15px;
-    font-size: 18px;
-    font-family: 'Noto Sans JP', sans-serif ;
+    font-size: 28px;
+
 }
 
 .name2{
     margin-top: 15px;
-    font-size: 18px;
-    font-family: 'Noto Sans JP', sans-serif ;
+    font-size: 28px;
+  
 }
 
 .name3{
     margin-top: 15px;
-    font-size: 18px;
-    font-family: 'Noto Sans JP', sans-serif ;
+    font-size: 28px;
+
 }
 
 .aboutPosition{
     margin-top: 15px;
+    font-size: 24px;
+
 }
 
 .icon1{
@@ -286,6 +309,7 @@ img.animated-gif{
     width: 100%;
     height: 900px;
     background-color: #edf2f5;
+    margin-top: 50px;
 }
 
 .tabs_nav{
@@ -371,18 +395,22 @@ footer h1{
     text-align: center;
     color: #1fb4b3 ;
     margin-top: 60px;
+    margin-left: 15px;
 }
 
 .footer{
     margin-top: 150px;
     text-align: center;
-    font-family:'Noto Sans JP', sans-serif ;
-    font-weight: bold;
+    margin-left: 20px;
+    font-size: 24px;
 }
 
-footer h3{
+footer h1{
     margin-top: 30px;
     margin-bottom: 20px;
+    font-size: 56px;
+
+   
 }
 
 
@@ -396,10 +424,12 @@ footer a{
     margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
+    margin-left: 20px;
 }
 
 .url a{
     padding-left: 5px;
+    
 }
 
 
