--- a/sizes.css
+++ b/sizes.css
@@ -3,10 +3,104 @@
     src: url(/DARAY.OTF);
 }
 @media (max-width: 1500px){
+    .time{
+        margin-right: 1052px;
+    }
+    
+    .social{
+        padding-right: 1223px;
+    }
 
+    .call{
+        margin-left: 864px;
+    }
+
+    .logo .line{
+        width: 1320px;
+        margin-left: -49px;
+    }
+
+    .logo img{
+        padding-left: 523px;
+    }
+
+    .popup_body{
+        margin-top: 150px;
+        width: 600px;
+        height: 390px;
+    }
+
+    .form_button{
+        margin-top: 30px;
+    }
+
+    .info{
+        padding-left: 23px;
+        justify-content: center;
+        padding-top: 100px;
+    }
+
+    .image{
+        height: 128px;
+        width: 127px;
+    }
+
+    .image1{
+        height: 128px;
+        width: 127px;
+    }
+
+    .image2{
+        height: 128px;
+        width: 127px;
+    }
+
+    .name{
+        font-size: 36px;
+    }
+
+    .name1{
+        font-size: 36px;
+    }
+
+    .name2{
+        font-size: 36px;
+    }
+
+    .name3{
+        font-size: 36px;
+    }
+
+    .aboutPosition{
+        font-size: 30px;
+    }
+
+    .tabs-nav-btn {
+        font-size: 40px;
+    }
+
+    .tabs_block {
+        margin-top: 80px;
+    }
+
+    .card img {
+        width: 200px;
+        height: 250px;
+    }
+
+    .content{
+        width: 200px;   
+        height: 323px;
+    }
+
+    .slider__item img {
+        width: 130px;
+        height: 1020px;
+        max-width: 112%;
+    }
 }
 @media (max-width: 1200px){
-    
+  
 }
 @media (max-width: 992px){
     
@@ -36,8 +130,9 @@
         visibility: visible;
         background-color: white;
         position: absolute;
-        margin-top: 22px;
+        margin-top: 10px;
         height: 4px;
+        font-family: "Daray";
     }
 
     
@@ -45,7 +140,7 @@
         color: black;
         position: relative;
         padding-left: 14px;
-        font-size: 33px;
+        font-size: 52px;
 	}
     
     .nav{
@@ -241,11 +336,11 @@
     }
 
     footer{
-        background-color:#edf2f5;
         width: 838px;
         height: 600px;
         position: absolute;
         margin-top: 60px;
+        height: 706px;
     }
     
     footer h1{
@@ -258,7 +353,6 @@
     .footer{
         margin-top: 50px;
         text-align: center;
-        font-family:'Noto Sans JP', sans-serif ;
         font-weight: bold;
     }
 }
@@ -268,15 +362,15 @@
 @media (max-width: 480px){
     
         body{
-            width: 768px;
+            
             overflow-x: hidden;
         }
     
         header{
-            width: 836px;
+            width: 912px;
             overflow-x: hidden;
             position: fixed;
-            height: 168px;
+            height: 170px;
             opacity: 100%;
             background-color: white;   
             visibility: visible; 
@@ -297,7 +391,7 @@
             position: absolute;
             display: flex;
             margin-top: 50px;
-            margin-left: 310px;
+            margin-left: 340px;
             font-size: 60px;
             font-weight: bold;
             color: red  ;
@@ -309,7 +403,7 @@
             margin-top: 50px;
             font-size: 60px;
             font-weight: bold;
-            margin-left: -362px;
+            margin-left: -439px;
             visibility: visible;
         }
 
@@ -320,11 +414,66 @@
             background-color: white;
             position: absolute;
             opacity: 100%;
+            height: 60px;
         }
+
+        
+        .number {
+            margin-top: 39px;
+        }
+
+        .number a{
+            font-size: 36px;
+            margin-left: 10px;
+        }
+
+        .number img{
+            width: 30px;
+        }
+        
+        .instagram{
+            margin-left: 50px;
+            margin-top: 45px;
+            visibility: visible;
+        }
+
+        .instagram img{
+            margin-left: 0px;
+            width: 70px;
+        }
+
+        .outgoing-number a {
+            padding-top: 34px;
+            font-size: 26px;
+        }
+
+        a.glo{
+            width: 200px;
+            height: 30px;
+            margin-top: 60px;
+            margin-left: 40px;
+        }
+        
+        .card img{
+            width: 221px;
+            height: 294px;
+        }
+
+        header .call.local_nav{
+            margin-left: 165px;
+            width: 88%;
+            display: flex;
+            background-color: white;
+            position: absolute;
+            opacity: 100%;
+            margin-top: 10px;
+            height: 160px;
+        }
+        
 
         .intro{
             height: 450px;
-            width: 838px;
+            width: 119%;
         }
 
 
@@ -342,7 +491,7 @@
             display: block;
             position: absolute;
             width: 120%;
-            margin-left: 65%;
+            margin-left: 73%;
         }
     
         .name{
@@ -409,9 +558,9 @@
         }
 
         .new-products{
-            margin-top: 1800px;
-            height: 1400px;
-            width: 837px;
+            margin-top: 1980px;
+            height: 6400px;
+            width: 914px;
         }
 
         .tabs_block{
@@ -422,7 +571,7 @@
     
         .tabs_nav{
             position: absolute;
-            margin-left: 10%;
+            margin-left: 22%;
             margin-right: 20%;
             margin-top: -120px;
             display: flex;
@@ -449,7 +598,7 @@
     
         .tabs_block.active{
             display: block;
-            margin-left: 65%;
+            margin-left: 76%;
             margin-right: 25%;
         }
     
@@ -465,45 +614,125 @@
             padding-top: 30px;
             margin-left: -23%;
             margin-right: 30%;
+            flex-direction: column;
         }
     
         .card img{
-            padding-left: 20px;
+            width: 450px;
+            height: 480px;
+            padding-left: 0;
+        }
+
+        .content{
+            background-color: white;
+            height: 550px;
+            margin-top: 40px;
+            cursor: pointer;
+            width: 450px;
+            margin-left: 40px;
+        }
+
+        .text {
+            font-size: 45px;
+            text-align: center;
+            margin-top: 8px;
+            font-weight: bold;
         }
 
 
-    .delivery h1{
+
+        .delivery{
+            margin-top: -285px;
+            height: 897px;
+            margin-left: 0%;
+            width: 914px;
+        }
+        .delivery h1{
         font-size: 90px;
-    }
-
-    .block1{
+        }
+        
+        .block1{
         margin-top: -55px;
-    }
+        margin-left: -59px;
+        }
 
-    .block1 h2{
+       .block1 h2{
         font-size: 57px;
-    }
+        }
 
     .block1 p{
         font-size: 40px;
     }
 
-      footer{
-        margin-top:400px;
+    footer {
+        margin-top: 73px;
+        width: 914px;
     }
 
-.footer h1{
-    font-size: 90px;
-}
+    .footer h1{
+        font-size: 90px;
+    }
 
     .footer{
-        font-size: 33px;
+        font-size: 44px;
     }
 
     .url img {
         margin-top: -10px;
-        width: 51px;
+        width: 75px;
+        height: 75px;
     }
 
-     }
+    .line{
+        width: 175px;
+    }
+
+    .popup_body{
+        width: 650px;
+        height: 480px;
+    }
+
+    .form_button{
+        margin-top: 45px;
+    }
+
+    .form_title{
+        margin-top: 30px;
+    }
+
+   /* Form */
+
+   .close{
+    position: absolute;
+    text-decoration: none;
+    color: black;
+    left: 90%;
+    top: -2%;
+}
+
+.close img{
+    width: 40px;
+    height: 40px;
+}
+
+.form_label{
+    font-size: 36px;
+    margin-left: 100px;
+}
+
+.form_button{
+    font-size: 30px;
+}
+
+.form_input{
+    font-size: 36px;
+    height: 62px;
+    margin-left: 100px;
+    width: 63%;
+}
+ .form_item{
+    margin-top: -2px;
+ }
+
+}
 
